add more logs into MSSQL background thread